--- a/turism.html
+++ b/turism.html
@@ -5,6 +5,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Permanent+Marker&display=swap');
 body{
 	background-image:url("image/background.jpg");
+	background-image: no-repeat top center ;
 	background-size:cover;
 	background-attachment:fixed;
 	}
